--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    margin: 0 20px;
 }
 
 .header__up-line--name{
@@ -14,10 +14,10 @@
     font-size: 30px;
 }
 
-.menu__hamburger--img {
+.header__up-line__hamburger--img{
     width: 60px;
 
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         display: none;
     }
 }
@@ -25,75 +25,77 @@
 .header__menu {
     display: none;
 
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         display: flex;
     }
 }
 
 .menu__item{
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 10px;
     color:$blue-dark;
 
     &:hover,
     &:active {
         text-decoration: underline;
-        color: #81aac6;
+        color: $blue-light;
+    }
+
+    @media screen and (min-width:1100px){
+        padding: 10px 20px;
     }
 }
 
-//                  === HEADER PART - UP ===
+//                  === HEADER PART - INFO CARD ===
 
 .header__introduction {
     background-image: url(../images/cover_photo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    padding: 100px 50px 50px 50px;
+
+    @media screen and (min-width:960px){
+        padding: 0 0 50px 0;
+    }
 }
 
-.header_introduction--flex {
+.header__introduction--flex {
     display: flex;
     flex-direction: column;
     
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         flex-direction: row;
         width:968px;
         margin: 0px auto;
         padding-top: 130px;
     }
 }
+
+// === HEADER PART - LEFT SIDE IMG ===
 .header__introduction--img {
     margin: 0 auto;
     display: block;
     width: 100%;
-    padding: 50px 20px 0 20px;
 
-    @media screen and (min-width:400px){
-        padding:50px 40px 0 40px;
-       
-    }
-
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         padding: 0;
         flex: 0 0 50%;
         width:473px;
     }
 }
-.header__introductio--information {
+
+// === HEADER PART - RIGHT SIDE INFORMATION ===
+
+.header__introduction--information {
     background-color: #F1F1F1;
-    margin: 0 20px 0px 20px;
     padding: 40px 50px;
 
-    @media screen and (min-width:400px){
-        margin:0 40px 0px 40px;
-    }
-
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         margin: 0;
         flex: 0 0 50%;
         padding-top: 100px;
     }
 }
-
 
 .header__introduction__title {
     font-size: 35px;
@@ -114,19 +116,16 @@
     margin: 0;
 }
 
+// === HEADER PART - NETWORKS ===
+
 .header__introduction--networks {
     background-color: $blue-dark;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 20px 40px 0;
     padding: 20px 0;
 
-    @media screen and (min-width:400px){
-        margin:0 40px 40px 40px;
-    }
-
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         width: 968px;
         margin:0 auto;
     }
