--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,5 +2,6 @@ $font-main: 'Roboto';
 
 // colors
 $blue-dark: #3a596d;
-$blue-light:#9e9e9e;
+$blue-light: #81aac6;
+$grey-light:#9e9e9e;
 $grey: #F1F1F1;
