--- a/css/style.css
+++ b/css/style.css
@@ -16,49 +16,49 @@
 
 .skill__bar__git {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 60%, #ddd 40%);
+  background: linear-gradient(to right, #81aac6 60%, #ddd 40%);
   border-radius: 5px;
   overflow: hidden;
 }
 
 .skill__bar__html-css {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 90%, #ddd 10%);
+  background: linear-gradient(to right, #81aac6 90%, #ddd 10%);
   border-radius: 5px;
   overflow: hidden;
 }
 
 .skill__bar__eleventy {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 80%, #ddd 20%);
+  background: linear-gradient(to right, #81aac6 80%, #ddd 20%);
   border-radius: 5px;
   overflow: hidden;
 }
 
 .skill__bar__javascript {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 60%, #ddd 40%);
+  background: linear-gradient(to right, #81aac6 60%, #ddd 40%);
   border-radius: 5px;
   overflow: hidden;
 }
 
 .skill__bar__python {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 50%, #ddd 50%);
+  background: linear-gradient(to right, #81aac6 50%, #ddd 50%);
   border-radius: 5px;
   overflow: hidden;
 }
 
 .skill__bar__corel {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 50%, #ddd 50%);
+  background: linear-gradient(to right, #81aac6 50%, #ddd 50%);
   border-radius: 5px;
   overflow: hidden;
 }
 
 .skill__bar__figma {
   height: 10px;
-  background: linear-gradient(to right, #9e9e9e 60%, #ddd 40%);
+  background: linear-gradient(to right, #81aac6 60%, #ddd 40%);
   border-radius: 5px;
   overflow: hidden;
 }
@@ -76,8 +76,17 @@
   padding: 40px;
 }
 
+.about-me__content {
+  text-align: center;
+}
+@media screen and (min-width: 968px) {
+  .about-me__content {
+    text-align: left;
+  }
+}
+
 .section__box {
-  margin: 40px 40px 0 40px;
+  margin: 0px 40px;
 }
 .section__box::before {
   content: "";
@@ -87,7 +96,7 @@
   width: 40%;
   margin: 50px 0;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .section__box {
     margin: 0;
   }
@@ -133,13 +142,13 @@
 .contact_info {
   padding: 40px 0;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .contact_info {
     padding-left: 40px;
   }
 }
 
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .contact__flex {
     display: flex;
     padding-bottom: 30px;
@@ -154,8 +163,9 @@
 .contact__networks {
   display: none;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .contact__networks {
+    display: block;
     margin-top: 120px;
     padding-top: 50px;
     border-top: 1px solid #3a596d;
@@ -165,7 +175,7 @@
 .form {
   display: grid;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .form {
     flex: 0 0 50%;
     padding: 40px 30px 0 0;
@@ -178,7 +188,7 @@
   display: block;
   margin-bottom: 5px;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .form--label {
     font-size: 20px;
   }
@@ -195,7 +205,7 @@
   padding-left: 10px;
   border: 1px solid #3a596d;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .form--field {
     height: 35px;
   }
@@ -217,7 +227,7 @@
   color: #3a596d;
   font-weight: bold;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .form--button {
     font-size: 20px;
   }
@@ -225,13 +235,14 @@
 
 .form__fields--last-name {
   padding-left: 10px;
+  flex: 0 0 50%;
 }
 
 .header__up-line {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  margin: 0 20px;
 }
 
 .header__up-line--name {
@@ -239,11 +250,11 @@
   font-size: 30px;
 }
 
-.menu__hamburger--img {
+.header__up-line__hamburger--img {
   width: 60px;
 }
-@media screen and (min-width: 968px) {
-  .menu__hamburger--img {
+@media screen and (min-width: 960px) {
+  .header__up-line__hamburger--img {
     display: none;
   }
 }
@@ -251,7 +262,7 @@
 .header__menu {
   display: none;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .header__menu {
     display: flex;
   }
@@ -259,26 +270,37 @@
 
 .menu__item {
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 10px;
   color: #3a596d;
 }
 .menu__item:hover, .menu__item:active {
   text-decoration: underline;
   color: #81aac6;
 }
+@media screen and (min-width: 1100px) {
+  .menu__item {
+    padding: 10px 20px;
+  }
+}
 
 .header__introduction {
   background-image: url(../images/cover_photo.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 100px 50px 50px 50px;
+}
+@media screen and (min-width: 960px) {
+  .header__introduction {
+    padding: 0 0 50px 0;
+  }
 }
 
-.header_introduction--flex {
+.header__introduction--flex {
   display: flex;
   flex-direction: column;
 }
-@media screen and (min-width: 968px) {
-  .header_introduction--flex {
+@media screen and (min-width: 960px) {
+  .header__introduction--flex {
     flex-direction: row;
     width: 968px;
     margin: 0px auto;
@@ -290,14 +312,8 @@
   margin: 0 auto;
   display: block;
   width: 100%;
-  padding: 50px 20px 0 20px;
 }
-@media screen and (min-width: 400px) {
-  .header__introduction--img {
-    padding: 50px 40px 0 40px;
-  }
-}
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .header__introduction--img {
     padding: 0;
     flex: 0 0 50%;
@@ -305,18 +321,12 @@
   }
 }
 
-.header__introductio--information {
+.header__introduction--information {
   background-color: #F1F1F1;
-  margin: 0 20px 0px 20px;
   padding: 40px 50px;
 }
-@media screen and (min-width: 400px) {
-  .header__introductio--information {
-    margin: 0 40px 0px 40px;
-  }
-}
-@media screen and (min-width: 968px) {
-  .header__introductio--information {
+@media screen and (min-width: 960px) {
+  .header__introduction--information {
     margin: 0;
     flex: 0 0 50%;
     padding-top: 100px;
@@ -349,15 +359,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 20px 40px 0;
   padding: 20px 0;
 }
-@media screen and (min-width: 400px) {
-  .header__introduction--networks {
-    margin: 0 40px 40px 40px;
-  }
-}
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 960px) {
   .header__introduction--networks {
     width: 968px;
     margin: 0 auto;
