--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 .section__box {
-    margin: 40px 40px 0 40px;
+    margin: 0px 40px;
 
     &::before {
         content: "";
@@ -12,7 +12,7 @@
         margin: 50px 0;
     }
 
-    @media screen and (min-width:968px){
+    @media screen and (min-width:960px){
         margin:0;
     }
 }
